# Jarvis_BriefMe

./: .env  .env.example  .gitignore  EMAIL_SETUP.md  GOOGLE_SHEETS_SETUP.md  Makefile  README.md  codebase_history.json  cycles.json  debug_sheets.py  requirements.txt  run_daily.sh  test_sheets_by_name.py  tmp4ze0on7o.json  tmpe7y16tsd.json  tmpmf0qsq64.json  tmpol7edope.json  tmponyrfnu6.json  tmprq8jd7wn.json
Outputs/dailies/: Daily_07.09.25.txt  Daily_07.10.25.txt
Outputs/tables/: Table_07.08.25.xlsx  Table_07.09.25.xlsx  Table_07.10.25.xlsx
docs/: claude.md  define_fields.txt  prd.md  repo_overview.md
paicc-2-copy/: .gitignore  README.md  pyproject.toml  transcript.txt  transcript2.txt
paicc-2-copy/AI_DOCS/: openai_structured_output_example_code.md
paicc-2-copy/src/transcript_analytics/: arg_parse.py  constants.py  data_types.py  llm.py  main.py
src/: emailer.py  file_writer.py  main.py  settings.py  template_engine.py
src/datasets/: Countries.csv  Inventions.csv  Languages.csv  Oscars.csv  Presidents.csv  US_States.json
src/fetchers/: countries.py  github_trend.py  google_sheets.py  hn.py  languages.py  notion.py  restcountries.py  transcript_analytics.py  transcript_processor.py
src/generators/: codebase.py  cycle.py  summariser.py
src/utils/: logger.py  retry.py
templates/: daily_template.txt  daily_template_backup.txt
tests/: test_cycle.py  test_e2e.py  test_fetchers.py  test_file_writer.py  test_generators.py  test_template.py
